kube/kube-context-path/appone-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: af-appone-deployment
spec:
  replicas: 2
  revisionHistoryLimit: 6
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: af-appone
  template:
    metadata:
      name: af-appone
      labels:
        app: af-appone
    spec:
      containers:
        - name: af-appone
          image: stacksimplify/kube-nginxapp1:1.0.0
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message"]
            preStop:
              exec:
                command: ["/bin/sh","-c","nginx -s quit; while killall -0 nginx; do sleep 1; done"]
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
              cpu: "150m"
