kube/kube-context-path/apptwo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: af-apptwo-deployment
spec:
  replicas: 10
  revisionHistoryLimit: 6
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 2
  selector:
    matchLabels:
      app: af-apptwo
  template:
    metadata:
      name: af-apptwo
      labels:
        app: af-apptwo
    spec:
      containers:
        - name: af-apptwo
          image: stacksimplify/kube-nginxapp2:1.0.0
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message"]
            preStop:
              exec:
                command: ["/bin/sh","-c","nginx -s quit; while killall -0 nginx; do sleep 1; done"]
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
              cpu: "150m"
