kube/kube-context-path/uwb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: af-uwb-deployment
  labels:
    app: uwb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uwb
  template:
    metadata:
      labels:
        app: uwb
    spec:
      containers:
        - name: uwb
          image: stacksimplify/kube-usermgmt-webapp:1.0.0-MySQLDB
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: app
