kube/kube-context-path/uwb-mysql-service-az-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: af-az-mysql-service
spec:
  type: ExternalName
  externalName: "af-db0.mysql.database.azure.com"
