kube/kube-context-path/uwb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: af-uwb-service
  labels:
    app: uwb
spec:
  type: ClusterIP
  selector:
    app: uwb
  ports:
    - port: 80
      targetPort: 8080
