kube/kube-context-path/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: af-cpr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: af-uwb-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: af-appone-service
                port: 
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: af-apptwo-service
                port: 
                  number: 80
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name: af-uwb-service
                port: 
                  number: 80
